<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/card_layout_bg"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/menu_search_advanced_day_text"
            	android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#99222222"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <ToggleButton
                    android:id="@+id/day1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/monday_short"
                    android:textOn="@string/monday_short"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp" />

                <ToggleButton
                    android:id="@+id/day2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/tuesday_short"
                    android:textOn="@string/tuesday_short"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp" />

                <ToggleButton
                    android:id="@+id/day3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/wednesday_short"
                    android:textOn="@string/wednesday_short"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp" />

                <ToggleButton
                    android:id="@+id/day4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/thursday_short"
                    android:textOn="@string/thursday_short"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" >

                <ToggleButton
                    android:id="@+id/day5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/friday_short"
                    android:textOn="@string/friday_short"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp" />

                <ToggleButton
                    android:id="@+id/day6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/saturday_short"
                    android:textOn="@string/saturday_short"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp" />

                <ToggleButton
                    android:id="@+id/day7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/sunday_short"
                    android:textOn="@string/sunday_short"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp" />

                <ToggleButton
                    android:id="@+id/day_all"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_toggle_button"
                    android:textOff="@string/menu_search_advanced_day_all_text"
                    android:textOn="@string/menu_search_advanced_day_all_text"
               		android:textColor="#ff222222"
            		android:fontFamily="sans-serif"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/menu_search_advanced_time_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#99222222"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ch.unibe.sport.widget.view.SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/menu_search_advanced_course_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#99222222"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:hint="course"
            android:maxLines="1"
            android:textColor="#ff222222"
            android:textColorHint="#66222222"
            android:textStyle="bold"
            android:inputType="textFilter"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp" >
        </EditText>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="#22222222" />

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/course_info_link_bg"
                android:fontFamily="sans-serif-light"
                android:text="@string/menu_search_advanced_close_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#99222222"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:background="#22222222" />

            <Button
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/course_info_link_bg"
                android:fontFamily="sans-serif"
                android:text="@string/menu_search_advanced_search_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#99222222"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>