<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#99222222"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:background="#22222222" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1" >

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>

        <LinearLayout
            android:id="@+id/fade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ccFFFFFF"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
            	android:id="@+id/error_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:visibility="gone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#99222222"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/error_text_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#99222222"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/progress_bar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center" />
		
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="#22222222" />

    <LinearLayout
        android:id="@+id/ok_cancel_container"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/course_info_link_bg"
            android:fontFamily="sans-serif-light"
            android:text="@string/dialog_button_cancel_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#99222222"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:background="#22222222" />

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/course_info_link_bg"
            android:fontFamily="sans-serif"
            android:text="@string/dialog_button_ok_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#99222222"
            android:textSize="18sp"
            android:clickable="false" />
    </LinearLayout>
	<LinearLayout
        android:id="@+id/close_container"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/course_info_link_bg"
            android:fontFamily="sans-serif-light"
            android:text="@string/dialog_button_close_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#99222222"
            android:textSize="18sp"
            android:textStyle="bold" />
       
    </LinearLayout>
</LinearLayout>